--- a/public/style.css
+++ b/public/style.css
@@ -1,82 +1,68 @@
-/* styles */
-/* called by your view template */
-
-/* You might want to try something fancier: */
-/* less: http://lesscss.org/ */
-
-* {
-  box-sizing: border-box;
+.border {
+  border-style: inset;
+  border-width: 1px;
+  margin: 10px;
 }
 
-body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 25px;
+.center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-h1 {
-  font-weight: bold;
-  color: pink;
+.login {
+  margin-top: 100px;
 }
 
-.bold {
-  font-weight: bold;
+.chat {
+  margin-top: 40px;
+  width: 500px;
 }
 
-p {
-  max-width: 600px;
+.chat-box {
+  margin-top: 20px;
+  height: 500px;
+}
+
+#logout {
+  position: absolute;
+  bottom: 20px;
 }
 
 form {
-  margin-bottom: 25px;
-  padding: 15px;
-  background-color: cyan;
-  display: inline-block;
-  width: 100%;
-  max-width: 340px;
-  border-radius: 3px;
+  background: #000;
+  padding: 3px;
+  width: 500px;
 }
 
-input {
-  display: block;
-  margin-bottom: 10px;
-  padding: 5px;
-  width: 100%;
-  border: 1px solid lightgrey;
-  border-radius: 3px;
-  font-size: 16px;
+form input {
+  border: 0;
+  padding: 10px; 
+  width: 90%; 
+  margin-right: .5%;
 }
 
-button {
-  font-size: 16px;
-  border-radius: 3px;
-  background-color: lightgrey;
-  border: 1px solid grey;
-  box-shadow: 2px 2px teal;
-  cursor: pointer;
+form button { 
+  width: 9%;
+  background: rgb(130, 224, 255);
+  border: none; 
+  padding: 10px; 
 }
 
-button:hover {
-  background-color: yellow;
+#messages { 
+  list-style-type: none;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  height: 20em;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
-button:active {
-  box-shadow: none;
+#messages li { 
+  padding: 5px 10px;
 }
 
-li {
-  margin-bottom: 5px;
-}
-
-footer {
-  margin-top: 50px;
-  padding-top: 25px;
-  border-top: 1px solid lightgrey;
-}
-
-footer > a {
-  color: #BBBBBB;
-}
-
-.nicejob {
-  text-decoration: line-through;
+#messages li:nth-child(odd) { 
+  background: #eee;
 }
